--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,11 @@
 ::before {
   box-sizing: border-box;
 }
+.control-detailpage {
+  font-family: "Montserrat", helvetica, arial, sans-serif;
+  background-color: black !important;
+  color: white;
+}
 .right-side {
   flex-wrap: wrap !important;
   justify-content: space-around !important;
@@ -13,19 +18,20 @@
   margin: 20px;
 }
 .every-card:hover {
-  transform: scale(0.8);
+  transform: scale(1.1);
 }
 .photo {
-  background-color: white;
+  background-color: black;
 }
 .infor {
   background-color: rgb(250, 246, 246);
   padding-top: 30px;
+  background-color: black !important;
 }
 
 .all-in {
-  border: 1px solid lightgray;
   padding: 30px 200px 20px 200px;
+  background-color: black !important;
 }
 .type-film {
   background-color: red;
@@ -39,7 +45,7 @@
 h1 {
   margin-top: 30px;
   margin-bottom: 30px;
-  font-size: 65px;
+  font-size: 60px;
   text-transform: uppercase;
 }
 .imb-icon,
@@ -67,9 +73,85 @@ h1 {
   text-rendering: auto;
   line-height: 1;
 }
-li {
-  list-style: none;
+.control {
+  justify-content: space-between;
+  padding-top: 20px;
+  padding-bottom: 20px;
 }
-ul {
-  justify-content: space-between !important;
+.movie-title {
+  border-bottom: 1px solid white;
+}
+.overview {
+  /* border: 1px solid white; */
+  padding: 10px 50px 10px 50px;
+}
+.mb-3 {
+  background-color: coral !important;
+  /* transition: background-color 200ms linear; */
+  position: fixed !important;
+  /* z-index: 99; */
+}
+.container-1 {
+  position: relative;
+}
+.imb-score {
+  padding-left: 10px;
+}
+.imb-score-1 {
+  padding-left: 10px;
+  margin-right: 50px;
+}
+h2 {
+  text-decoration: underline;
+  font-style: italic !important;
+}
+h4 {
+  font-style: italic;
+  padding-bottom: 10px;
+}
+.comment-review {
+  padding: 10px 50px 100px 50px;
+  background-color: black;
+}
+.fa-heart:before {
+  content: "\f004";
+}
+.details-action-icon:hover {
+  background-color: red;
+}
+.details-action-icon {
+  border: none;
+  margin-left: 70px;
+}
+.details-action-icon:visited {
+  background-color: red;
+  border: none;
+}
+.control-fav-list {
+  display: flex;
+}
+.text-group {
+  padding-bottom: 20px;
+  border-top: 1px solid white;
+  padding-top: 30px;
+  font-size: 20px;
+}
+.button-trailer {
+  background-color: green;
+  color: white !important;
+  font-size: 25px;
+  padding: 20px;
+  border-radius: 15px;
+  border: none;
+}
+.details-action-icon {
+  height: 50px;
+  width: 50px;
+  border: 0;
+  background: #fff1f0;
+  border-radius: 50px;
+  margin-right: 13px;
+  color: #fe4536;
+  font-size: 15px;
+  line-height: 50px;
 }
