--- a/src/App.css
+++ b/src/App.css
@@ -9,6 +9,7 @@
   color: white;
 }
 .no-nav-bar {
+  padding-top: 150px;
   padding-left: 20px;
   padding-right: 20px;
 }
@@ -90,10 +91,16 @@ h1 {
   padding: 10px 50px 10px 50px;
 }
 .mb-3 {
-  background-color: coral !important;
-  /* transition: background-color 200ms linear; */
-
-  /* z-index: 99; */
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  z-index: 1;
+  transition-timing-function: ease-out !important;
+  transition: all 1.5s !important;
+  background-color: none;
 }
 .container-1 {
   position: relative;
@@ -197,4 +204,15 @@ ul {
   border-radius: 40px;
   font-size: 30px;
   padding: 20px;
+}
+.badge-2 {
+  background-color: green;
+  border-radius: 40px;
+  font-size: 30px;
+  padding: 20px;
+}
+
+.menuside-control {
+  display: flex;
+  flex-direction: column;
 }
