--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,5 @@
+@import "react-input-range/lib/css/index.css";
+
 *,
 ::after,
 ::before {
@@ -215,4 +217,49 @@ ul {
 .menuside-control {
   display: flex;
   flex-direction: column;
+}
+
+.range-filter {
+  padding: 30px 0px;
+}
+
+.input-range__track--active {
+  /* background: #3f51b5; */
+  background: white;
+}
+
+.input-range__slider {
+  -webkit-appearance: none;
+  appearance: none;
+  background: #3f51b5;
+  border: 1px solid #3f51b5;
+  border-radius: 100%;
+  cursor: pointer;
+  display: block;
+  height: 1rem;
+  margin-left: -0.5rem;
+  margin-top: -0.65rem;
+  outline: none;
+  position: absolute;
+  top: 50%;
+  transition: transform 0.3s ease-out, box-shadow 0.3s ease-out;
+  width: 1rem;
+  color: white;
+  background-color: white;
+  border: none;
+}
+
+.input-range__label-container {
+  font-weight: bold;
+  font-family: sans-serif;
+  left: -50%;
+  position: relative;
+  font-size: 1rem;
+  color: white;
+}
+
+.menuside-control {
+  display: flex;
+  flex-direction: column;
+  background: black;
 }
