--- a/src/App.css
+++ b/src/App.css
@@ -196,7 +196,7 @@ a:hover {
 }
 .form-control {
   border-radius: 20px;
-  padding: 30px 0px 30px 200px;
+  padding: 30px 200px 30px 20px;
 }
 ul {
   list-style: none;
@@ -281,4 +281,16 @@ ul {
 }
 .control-fav {
   padding-top: 150px;
+}
+.wrap-card {
+  width: 30vw;
+  padding: 20px;
+}
+.control-card-favo-list {
+  align-items: flex-start;
+  flex: wrap;
+}
+.btn-primary {
+  padding: 10px 20px 10px;
+  font-size: 25px;
 }
